@@ -7,7 +7,7 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
-import java.util.Collections;
+import java.util.List;
 
 /**
  * Created By tofunmi on 12/07/2022
@@ -17,9 +17,12 @@ import java.util.Collections;
 public class Config {
 
     @Bean
-    public GoogleIdTokenVerifier googleIdTokenVerifier(@Value("${google-client-id}") String googleClientId) {
+    public GoogleIdTokenVerifier googleIdTokenVerifier(
+            @Value("${google-web-client-id}") String googleWebClientId,
+            @Value("${google-ios-client-id}") String googleIosClientId
+    ) {
         return new GoogleIdTokenVerifier.Builder(new NetHttpTransport(), new GsonFactory())
-                .setAudience(Collections.singletonList(googleClientId))
+                .setAudience(List.of(googleWebClientId, googleIosClientId))
                 .build();
     }
 }
